@@ -30,7 +30,7 @@ mount_path: /example
 # mgt|mdt|ost: [ tag=<RegExp> ] [ node=<RegExp> ] [ dev=<RegExp> ] 
 #              [ index=<RegExp> ] [ jdev=<RegExp> ] [ ha_node=<RegExp> ]
 #              [ group=<RegExp> ] [ mode={external|managed} ]
-#              [ network=<RegExp> ]
+#              [ network=<RegExp> ] [ active={yes|nocreate|no|manual} ]
 #
 # Here, we don't use any backend (no File nor ClusterDB), so we have to
 # fully describe our targets (no RegExp accepted). For this simple
